--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<head>
+    <title>Better Food Recommendations - Search</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
 
+</head>
+<body>
+    <div class="header">
+        <div class="header-bar">
+            <div class="nav-item"><a href="/" style="text-decoration: none;"><div class="site-title">BetterFoodRecs</div></a>
+        </div><div class="nav-item nav-menu"><a href="/about" class="nav-menu-item">About</a><a href="/workings" class="nav-menu-item">How it Works</a></div></div>
+        <div class="header-input-section">
+          <div class="header-title">
+              <h1>Better Food Recommendations</h1>
+          </div>
+          <div class="header-search">
+              <form action="search.html" method="get">
+                  <input class="search-section search-text" type="text" name="food" placeholder="Cuisine (Eg, Pizza)">
+                  <input class="search-section search-text" type="text" name="location" placeholder="Location (Eg, San Francisco)">
+                  <input class="search-section search-icon" type="submit" value="">
+              </form>
+          </div>
+        </div>
+    </div>
+    <div class="container">
+
+    </div>
+</body>
