--- a/search.html
+++ b/search.html
@@ -44,22 +44,24 @@
             }
             document.getElementById("listing").innerHTML = p + '<div class="listing"> <div class="listing-title">'+item[0]+'</div> <div class="listing-sim"><b>AKA:</b> '+data['names'][item[0]].join(", ")+'</div> <div class="listing-rating '+rc+'">'+Math.round(item[1]*10)/10+'</div> </div>' + document.getElementById("listing").innerHTML;
             p = '';
-            fetch('https://api.betterfoodrecs.com/api/v1/invoke/?'+"name=" + item[0] + "&location=" + location_c, {
-              method: 'GET'
-            }).then(function(response) { if(!response.ok) { throw new Error("not ok"); } return response.json() }).then((data_2)=>{
-              if(data_2.stat === "fail") {
-                throw new Error(data_2.message);
-              }
-              //if (!data_2['results'][0]['name'] === null && !data_2['results'][0]['name'] === undefined){
-                var z = getElementbyInnerText(item[0]);
-                if (data_2['results'][0]['name'].length > 1){
-                  z.innerText = data_2['results'][0]['name'];
-                  z.outerHTML += '<div class="listing-address">' + data_2['results'][0]['address'] + '</div>';
-                }
-              //}
-            }).catch(function(err) {
-              console.log(err);
-            });
+	    if (item[1] > 8){
+		    fetch('https://api.betterfoodrecs.com/api/v1/invoke/?'+"name=" + item[0] + "&location=" + location_c, {
+		      method: 'GET'
+		    }).then(function(response) { if(!response.ok) { throw new Error("not ok"); } return response.json() }).then((data_2)=>{
+		      if(data_2.stat === "fail") {
+			throw new Error(data_2.message);
+		      }
+		      //if (!data_2['results'][0]['name'] === null && !data_2['results'][0]['name'] === undefined){
+			var z = getElementbyInnerText(item[0]);
+			if (data_2['results'][0]['name'].length > 1){
+			  z.innerText = data_2['results'][0]['name'];
+			  z.outerHTML += '<div class="listing-address">' + data_2['results'][0]['address'] + '</div>';
+			}
+		      //}
+		    }).catch(function(err) {
+		      console.log(err);
+		    });
+	    }
            
         })
         document.getElementById("loading").style.display = "none";
