--- a/search.html
+++ b/search.html
@@ -55,12 +55,12 @@
 			var z = getElementbyInnerText(item[0]);
 			if (data_2['results'][0]['name'].length > 1){
 			  z.innerText = data_2['results'][0]['name'];
-	                  if(data_2['results'][0]['address'] == 'ACTIVE'){
-				z.outerHTML += '<div class="listing-status status-active">Active</div>';
+	                  if(data_2['results'][0]['status'] == 'ACTIVE'){
+				var k += '<div class="listing-status status-active">Active</div>';
 			  } else {
-				z.outerHTML += '<div class="listing-status status-failed">Permanently Closed</div>';
+				var k += '<div class="listing-status status-failed">Permanently Closed</div>';
 			  }
-			  z.outerHTML += '<div class="listing-address">' + data_2['results'][0]['address'] + '</div>';
+			  z.outerHTML += k + '<div class="listing-address">' + data_2['results'][0]['address'] + '</div>';
 			}
 		      //}
 		    }).catch(function(err) {
