--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <html><head>
-	<title>Better Food Recommendations - Search</title>
+	<title>Better Food Recommendations - About</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/style.css" rel="stylesheet" type="text/css">
