--- a/workings/index.html
+++ b/workings/index.html
@@ -83,7 +83,7 @@ def</span> <span class="purple">__parse_c</span>(self, string):<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="purple">populate_data</span>(data);<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;}<br>
-        )<br></p><p class="body-p">And...there we have it. Suggestions? Questions? Email welton@betterfoodrecs.com</p<p class="body-p">Built by Welton Wang © 2021</p></div>
+        )<br></p><p class="body-p">And...there we have it. Suggestions? Questions? Email welton@betterfoodrecs.com</p><p class="body-p">Built by Welton Wang © 2021</p></div>
 	</div>
 
 </body></html>
