--- a/workings/index.html
+++ b/workings/index.html
@@ -85,5 +85,14 @@ def</span> <span class="purple">__parse_c</span>(self, string):<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;}<br>
         )<br></p><p class="body-p">And...there we have it. Suggestions? Questions? Email welton@betterfoodrecs.com</p><p class="body-p">Built by Welton Wang © 2022</p></div>
 	</div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QPJK74EEM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QPJK74EEM');
+</script>
 
 </body></html>
