--- a/search.html
+++ b/search.html
@@ -120,4 +120,14 @@
       <div class="loading-text-below" id="loading-text-below">This may take up to 90 seconds.</div>
     </div>
 	</div>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QPJK74EEM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QPJK74EEM');
+</script>
+
 </body>
