--- a/search.html
+++ b/search.html
@@ -114,6 +114,7 @@
 	</div>
   
 	<div class="container"id="listing">
+		<div class="explain">☉<div class="tooltip">Interpreting the Score</div><div class="tooltip-open">Computed score based on # of mentions, # of upvotes/mention, and time decay. <a href="/about">Learn more.</a></div></div>
     <div class="loading" id="loading">
       <div class="lds-ripple"><div></div><div></div></div>
       <div class="loading-text" id="loading-text">Fetching results...</div>
